@@ -37,7 +37,7 @@
  * SUCH DAMAGE.
  *
  *
- * $Id: fsi_gram.y,v 1.9 2002/12/27 22:44:07 ezk Exp $
+ * $Id: fsi_gram.y,v 1.10 2003/09/26 20:15:14 ro Exp $
  *
  */
 
@@ -48,26 +48,6 @@
 #include <am_defs.h>
 #include <fsi_data.h>
 #include <fsinfo.h>
-
-/* AIX requires this to be the first thing in the file. */
-#ifndef __GNUC__
-# if HAVE_ALLOCA_H
-#  include <alloca.h>
-# else /* not HAVE_ALLOCA_H */
-#  ifdef _AIX
-/*
- * This pragma directive is indented so that pre-ANSI C compilers will
- * ignore it, rather than choke on it.
- */
- #pragma alloca
-#  else /* not _AIX */
-#   ifndef alloca
-/* predefined by HP cc +Olibcalls */
-voidp alloca();
-#   endif /* not alloca */
-#  endif /* not _AIX */
-# endif /* not HAVE_ALLOCA_H */
-#endif /* not __GNUC__ */
 
 extern qelem *list_of_hosts, *list_of_automounts;
 %}
